<resources>
    <string name="app_name">My Application</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello DashboardSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello NotificationsSecondFragment. Arg: %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_release">Latest Release</string>
    <string name="title_notifications">Notifications</string>
    <string name="movie_details">Movie details</string>
    <string name="similar_movie">Similar movies</string>
    <string name="about">Profile</string>
    <string name="review">Reviews</string>
    <string name="ytb">Video player</string>
    <string name="favorite">Favorite list</string>

    <string name="home_second">Home Second</string>
    <string name="videos">Trailers</string>
    <string name="cast">Cast</string>
    <string name="similar">Fans also like</string>
    <string name="see_more">See more</string>
</resources>