<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_MovieFragment"
            app:destination="@id/navigation_movies" />
    </fragment>

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.gmail.eamosse.imdb.ui.movie.MovieFragment"
        android:label="@string/title_home"
        tools:layout="@layout/list_movies_fragment">

        <action
            android:id="@+id/action_MovieFragment_to_MovieDetailsFragment"
            app:destination="@id/navigation_movies_details" />

        <argument
            android:name="Category"
            app:argType="com.gmail.eamosse.imdb.parcelable.CategoryParcelable" />
    </fragment>

    <fragment
        android:id="@+id/navigation_movies_details"
        android:name="com.gmail.eamosse.imdb.ui.moviedetails.MovieDetailsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_details_movies">
        <argument
            android:name="Details"
            app:argType="com.gmail.eamosse.imdb.parcelable.MovieParcelable" />
    </fragment>


    <fragment
        android:id="@+id/navigation_home_second"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/navigation_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>


    <fragment
        android:id="@+id/navigation_release"
        android:name="com.gmail.eamosse.imdb.ui.release.ReleaseFragment"
        android:label="@string/title_release"
        tools:layout="@layout/fragment_release">
    <action
        android:id="@+id/action_ReleaseFragment_to_MovieDetailsFragment"
        app:destination="@id/navigation_movies_details" />
    </fragment>


    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gmail.eamosse.imdb.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>