<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.gmail.eamosse.imdb.ui.moviedetails.MovieDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewmodel.details != null ? View.VISIBLE : View.INVISIBLE}"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/movieImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/topGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic[1]" />

        <ProgressBar
            android:id="@+id/movieImageProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/movieImage"
            app:layout_constraintEnd_toEndOf="@id/movieImage"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/movieImage"
            app:layout_constraintTop_toTopOf="@id/movieImage"
            tools:visibility="visible" />

        <View
            android:id="@+id/fadeView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/shape_gradient"
            app:layout_constraintBottom_toBottomOf="@id/movieImage" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".35" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/moviesLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topGuideline">

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/infoLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/titleText"
                            style="@style/TitleStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@{viewmodel.details.title}"
                            android:textSize="36sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toLeftOf="@id/subInfoLayout"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Title" />

                        <TextView
                            android:id="@+id/genresText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            app:layout_constraintLeft_toLeftOf="@id/titleText"
                            app:layout_constraintRight_toLeftOf="@id/subInfoLayout"
                            app:layout_constraintTop_toBottomOf="@id/titleText"
                            tools:text="Thriller / Adventure / Action / Mystery" />

                        <RatingBar
                            android:id="@+id/ratingBar"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:numStars="5"
                            android:stepSize=".5"
                            android:theme="@style/RatingBarTheme"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/genresText"
                            tools:rating="4" />

                        <TextView
                            android:id="@+id/numOfVotes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@{viewmodel.details != null? viewmodel.details.voteCount + ` votes` : ``}"
                            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                            app:layout_constraintStart_toEndOf="@+id/ratingBar"
                            app:layout_constraintTop_toTopOf="@id/ratingBar"
                            tools:text="189 votes" />

                        <LinearLayout
                            android:id="@+id/subInfoLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="vertical"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:id="@+id/episodeImage"
                                    android:layout_width="18dp"
                                    android:layout_height="18dp"
                                    android:contentDescription="@null"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/ic_baseline_event_24" />

                                <TextView
                                    android:id="@+id/episodeText"
                                    android:layout_width="71dp"
                                    android:layout_height="16dp"
                                    android:gravity="center_vertical"
                                    android:textSize="12sp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintLeft_toRightOf="@id/episodeImage"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:text="22 Oct 2017" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp">

                                <ImageView
                                    android:id="@+id/seasonImage"
                                    android:layout_width="18dp"
                                    android:layout_height="18dp"
                                    android:contentDescription="@null"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/ic_baseline_access_time_24" />

                                <TextView
                                    android:id="@+id/seasonText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_marginStart="8dp"
                                    android:gravity="center_vertical"
                                    android:textSize="12sp"
                                    app:layout_constraintBottom_toBottomOf="@id/seasonImage"
                                    app:layout_constraintLeft_toRightOf="@id/seasonImage"
                                    app:layout_constraintTop_toTopOf="@id/seasonImage"
                                    tools:text="2:15 / 135 min" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp">

                                <ImageView
                                    android:id="@+id/airDateImage"
                                    android:layout_width="18dp"
                                    android:layout_height="18dp"
                                    android:contentDescription="@null"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/ic_baseline_language_24" />

                                <TextView
                                    android:id="@+id/airDateText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:gravity="center_vertical"
                                    android:textSize="12sp"
                                    app:layout_constraintBottom_toBottomOf="@id/airDateImage"
                                    app:layout_constraintLeft_toRightOf="@id/airDateImage"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:text="English" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <TextView
                        android:id="@+id/overviewText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:alpha=".7"
                        android:text="@{viewmodel.details.overview}"
                        tools:text="Trapped on the beach with their backs to the sea, British and Allied troops are surrounded by enemy forces." />

                    <TextView
                        android:id="@+id/movieText"
                        style="@style/NunitoSemiBoldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/videos"
                        android:textSize="18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/videos_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/video_item" />

                    <TextView
                        android:id="@+id/castText"
                        style="@style/NunitoSemiBoldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/cast"
                        android:textSize="18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/cast_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/cast_item" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/similarLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/similarMovieText"
                            style="@style/NunitoSemiBoldStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/similar"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/more_similar_movies"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/see_more"
                            android:textSize="12sp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="@id/similarMovieText"
                            app:layout_constraintRight_toRightOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/partial_similar_movie_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/movie_item"/>
                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>